[package]
name = "ara_reporting"
version = "0.6.0"
edition = "2021"
description = "A Reporting library for for Ara Programming Language 📃"
readme = "README.md"
repository = "https://github.com/ara-lang/reporting"
documentation = "https://docs.rs/ara_reporting"
homepage = "https://github.com/ara-lang/reporting"
exclude = ["/.github/*"]
authors = ["Saif Eddin Gmati <azjezz@protonmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["ara", "error-reporting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ara_source = { version = "0.2.0" }
codespan-reporting = { version = "0.11.1", features = ["serialization"] }
schemars = { version = "0.8.11" }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = { version = "1.0.89" }
termcolor = "1.1.3"
rustc-hash = "1.1.0"
